# education_system-2.0

./: .env  assistantManager.js  assistants.js  config.js  curl  example_api_export  index.js  index.py  package-lock.json  package.json  supabaseClient.js
assistant/: .env  api.js  assist.js  assistant.py  assistants.js  conversation_history_server.js  delete.js  execute.js  extract_response.js  gpt.js  gpt_history.js  gpt_output.js  gpt_role.js  index.js  main.js  messages.js  package-lock.json  package.json  revenue-forecast.csv  run_step.js  runs.js  stream.js  threads.js  uploadfiles.js  vector_file_batch.js  vector_store.js  vector_store_files.js
audio/: audioProcessing.js  audioRoute.js  index.js  openaiAudioServer.js
file_search/: scrimba.txt  searchFile.js
frontend/: package-lock.json  package.json
function-calling/: function.js  multiple_function.js  test_weather.js
history/: testUser.txt  unique-user-id.txt
html/: audio.html  gpt_route.html  llava.html  sdxl_lightning.html  stable_diffusion.html
image/: llava.js  llavaRoute.js  sdxlLightningRoute.js  sdxl_lightning.js  stableDiffusionRoute.js  stable_diffusion.js  test.js
learning/: assessmentRoute.js  learningPlanRoute.js
python-server/: main.py  pyproject.toml  supabase_function.py
python-server/storage/: default__vector_store.json  docstore.json  index_store.json
text/: gpt.js  gptRoute.js  index.html  stream.js  stream_server.js
tts/: annyang.js  assistant.js  async_read.js  function_call.js  groq.js  index.html  openai-tts.js  opencv_server.py  script.js  test.js  tool.js  tts.html
(+15 files in other folders)
